# fyp-moovita

./: README.md  requirements.sh  requirements.txt
launches/: package.xml
launches/launch/: ngeeann_av.launch
ngeeann_av_description/: package.xml
ngeeann_av_gazebo/: CMakeLists.txt  package.xml
ngeeann_av_msgs/: CMakeLists.txt  package.xml
ngeeann_av_nav/: CMakeLists.txt  package.xml
ngeeann_av_nav/config/: navigation_params.yaml
ngeeann_av_nav/nodes/: bof.py  globalplanner.py  localisation.py  localplanner.py  localplanner_frenet.py  tracker.py
ngeeann_av_nav/src/utils/: normalise_angle.py  spline_planner.py
resources/game/Cars_Data/: globalgamemanagers  level0  level0.resS  resources.assets  sharedassets0.assets
resources/game/Cars_Data/Resources/: unity_builtin_extra
scripts/: circle_road_gen.py  roadmap_gen.py
