<?xml version="1.0"?>
<package format="2">
  <name>ngeeann_av_msgs</name>
  <version>0.0.0</version>
  <description>The ngeeann_av_msgs package</description>

  <maintainer email="winstxnhdw@todo.todo">winstxnhdw</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <url type="repository">https://github.com/winstxnhdw/AutoCarROS</url>
  <author email="winstxnhdw@todo.todo">winstxnhdw</author>
  <author email="reuben_thomas@todo.todo">reuben_thomas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <architecture_independent/>
  </export>
</package>
